TaskTracker/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tote.com
      secretName: apache-tls-secret
  rules:
    - host: tote.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-server-service
                port:
                  number: 5000
          - path: /phpmyadmin
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
          - path: /sql
            pathType: Prefix
            backend:
              service:
                name: mysql-service
                port:
                  number: 80
